chore: rename methods and variables in tests to align with updated terminology